# growth-model-atlantic-cod

./: CHANGELOG.md  LICENSE.md  README.md  logger.conf  pyproject.toml
config/: base.toml  multi_dim.toml  one_dim.toml  one_temp.toml  one_weight.toml
docs/: growth_model_description.md  growth_models.md
growth_model/: __init__.py  __main__.py  cli.py  constants.py  equations.py  utils.py
growth_model/data/: growth_parameters_multistep.npz  growth_parameters_multistep.npz.license
growth_model/models/: base.py  multi_dim.py  one_dim.py  one_init_weight.py  one_temp_input.py
input_data/: 1980_temp_SODA_masked_north_atlantic.nc_30-580m_CelticSea.nc  1981_temp_SODA_masked_north_atlantic.nc_30-580m_CelticSea.nc  1982_temp_SODA_masked_north_atlantic.nc_30-580m_CelticSea.nc  1983_temp_SODA_masked_north_atlantic.nc_30-580m_CelticSea.nc  1984_temp_SODA_masked_north_atlantic.nc_30-580m_CelticSea.nc  1985_temp_SODA_masked_north_atlantic.nc_30-580m_CelticSea.nc  1986_temp_SODA_masked_north_atlantic.nc_30-580m_CelticSea.nc  1987_temp_SODA_masked_north_atlantic.nc_30-580m_CelticSea.nc  1988_temp_SODA_masked_north_atlantic.nc_30-580m_CelticSea.nc  1989_temp_SODA_masked_north_atlantic.nc_30-580m_CelticSea.nc  description.md
